--- a/client/app/src/main/res/layout/fragment_new_password.xml
+++ b/client/app/src/main/res/layout/fragment_new_password.xml
@@ -6,40 +6,85 @@
     android:layout_height="match_parent"
     tools:context=".presentation.forgot_password.NewPasswordFragment">
 
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline28"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.03" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline29"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.15" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline30"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.85" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline31"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.39" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline32"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.43" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline33"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.78" />
+
     <ImageView
         android:id="@+id/image_forgot_password"
-        android:layout_width="288dp"
-        android:layout_height="193dp"
-        android:layout_marginTop="30dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:contentDescription="@string/cover_authentication"
         android:src="@drawable/ic_undraw_forgot_password"
         app:layout_constraintBottom_toTopOf="@+id/image_app_logo"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintEnd_toStartOf="@+id/guideline30"
+        app:layout_constraintStart_toStartOf="@+id/guideline29"
+        app:layout_constraintTop_toTopOf="@+id/guideline28"
+        app:layout_constraintVertical_chainStyle="spread" />
 
     <ImageView
         android:id="@+id/image_app_logo"
         style="@style/AppLogo"
-        android:layout_marginTop="15dp"
+        android:layout_width="0dp"
         android:contentDescription="@string/logo_app"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/guideline31"
+        app:layout_constraintEnd_toStartOf="@+id/guideline30"
+        app:layout_constraintStart_toStartOf="@+id/guideline29"
         app:layout_constraintTop_toBottomOf="@+id/image_forgot_password" />
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/textfield_confirm_code_reset"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
         android:hint="@string/hint_confirmation_code"
         android:maxWidth="250dp"
         android:minWidth="250dp"
         app:endIconMode="clear_text"
         app:errorEnabled="true"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/image_app_logo">
+        app:layout_constraintBottom_toTopOf="@+id/textfield_password"
+        app:layout_constraintEnd_toStartOf="@+id/guideline30"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="@+id/guideline29"
+        app:layout_constraintTop_toTopOf="@+id/guideline32"
+        app:layout_constraintVertical_chainStyle="spread">
 
 
         <com.google.android.material.textfield.TextInputEditText
@@ -52,15 +97,17 @@
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/textfield_password"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:hint="@string/hint_password"
         android:maxWidth="250dp"
         android:minWidth="250dp"
         app:endIconMode="password_toggle"
         app:errorEnabled="true"
-        app:layout_constraintEnd_toEndOf="@+id/textfield_confirm_code_reset"
-        app:layout_constraintStart_toStartOf="@+id/textfield_confirm_code_reset"
+        app:layout_constraintBottom_toTopOf="@+id/textfield_confirm_password"
+        app:layout_constraintEnd_toStartOf="@+id/guideline30"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="@+id/guideline29"
         app:layout_constraintTop_toBottomOf="@+id/textfield_confirm_code_reset">
 
         <com.google.android.material.textfield.TextInputEditText
@@ -73,16 +120,17 @@
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/textfield_confirm_password"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:hint="@string/hint_confirm_password"
         android:maxWidth="250dp"
         android:minWidth="250dp"
         app:endIconMode="password_toggle"
         app:errorEnabled="true"
-        app:layout_constraintEnd_toEndOf="@+id/textfield_password"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/textfield_password"
+        app:layout_constraintBottom_toTopOf="@+id/button_reset_password"
+        app:layout_constraintEnd_toStartOf="@+id/guideline30"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="@+id/guideline29"
         app:layout_constraintTop_toBottomOf="@+id/textfield_password">
 
         <com.google.android.material.textfield.TextInputEditText
@@ -95,16 +143,16 @@
 
     <Button
         android:id="@+id/button_reset_password"
-        android:layout_width="250dp"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="2dp"
         android:enabled="true"
         android:text="@string/button_confirm_reset_text"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/textfield_confirm_password"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/textfield_confirm_password"
-        app:layout_constraintTop_toBottomOf="@id/textfield_confirm_password"
+        app:layout_constraintBottom_toTopOf="@+id/guideline33"
+        app:layout_constraintEnd_toStartOf="@+id/guideline30"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="@+id/guideline29"
+        app:layout_constraintTop_toBottomOf="@+id/textfield_confirm_password"
         app:layout_constraintVertical_bias="0.0" />
 
     <ProgressBar
