--- a/client/app/src/main/res/layout/fragment_registration.xml
+++ b/client/app/src/main/res/layout/fragment_registration.xml
@@ -12,7 +12,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.86" />
+        app:layout_constraintGuide_percent="0.9" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline11"
@@ -36,6 +36,13 @@
         app:layout_constraintGuide_percent="0.39" />
 
     <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline14"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.43" />
+
+    <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -51,7 +58,8 @@
         app:layout_constraintBottom_toTopOf="@+id/image_app_logo"
         app:layout_constraintEnd_toStartOf="@+id/guideline11"
         app:layout_constraintStart_toStartOf="@+id/guideline12"
-        app:layout_constraintTop_toTopOf="@+id/guideline3" />
+        app:layout_constraintTop_toTopOf="@+id/guideline3"
+        app:layout_constraintVertical_chainStyle="packed" />
 
     <ImageView
         android:id="@+id/image_app_logo"
@@ -66,7 +74,7 @@
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/textfield_username"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:hint="@string/hint_username"
         android:maxWidth="250dp"
@@ -77,7 +85,7 @@
         app:layout_constraintEnd_toStartOf="@+id/guideline11"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="@+id/guideline12"
-        app:layout_constraintTop_toBottomOf="@+id/image_app_logo"
+        app:layout_constraintTop_toTopOf="@+id/guideline14"
         app:layout_constraintVertical_chainStyle="spread">
 
 
@@ -91,7 +99,7 @@
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/textfield_email"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:hint="@string/hint_email"
         android:maxWidth="250dp"
@@ -115,7 +123,7 @@
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/textfield_password"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:hint="@string/hint_password"
         android:maxWidth="250dp"
@@ -138,7 +146,7 @@
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/textfield_confirm_password"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:hint="@string/hint_confirm_password"
         android:maxWidth="250dp"
@@ -161,10 +169,10 @@
 
     <Button
         android:id="@+id/button_signup"
-        android:layout_width="250dp"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="2dp"
-        android:enabled="true"
+        android:enabled="false"
         android:text="@string/button_signup_send_text"
         app:layout_constraintBottom_toTopOf="@+id/guideline13"
         app:layout_constraintEnd_toStartOf="@+id/guideline11"
