--- a/client/app/src/main/res/layout/fragment_confirmation.xml
+++ b/client/app/src/main/res/layout/fragment_confirmation.xml
@@ -58,7 +58,7 @@
         android:id="@+id/button_confirmation"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:enabled="true"
+        android:enabled="false"
         android:text="@string/button_confirm_text"
         app:layout_constraintBottom_toTopOf="@+id/button_resend_code"
         app:layout_constraintEnd_toStartOf="@+id/guideline18"
@@ -96,7 +96,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.63" />
+        app:layout_constraintGuide_percent="0.65" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline16"
