--- a/client/app/src/main/res/layout/fragment_forgot_password.xml
+++ b/client/app/src/main/res/layout/fragment_forgot_password.xml
@@ -102,7 +102,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="2dp"
-        android:enabled="true"
+        android:enabled="false"
         android:text="@string/button_forgot_password_text"
         app:layout_constraintBottom_toTopOf="@+id/guideline25"
         app:layout_constraintEnd_toStartOf="@+id/guideline27"
