--- a/client/app/src/main/res/layout/fragment_new_password.xml
+++ b/client/app/src/main/res/layout/fragment_new_password.xml
@@ -146,7 +146,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="2dp"
-        android:enabled="true"
+        android:enabled="false"
         android:text="@string/button_confirm_reset_text"
         app:layout_constraintBottom_toTopOf="@+id/guideline33"
         app:layout_constraintEnd_toStartOf="@+id/guideline30"
